Desenvolvendo, novo contrato para consumir o serviço pricing, desenvolvimento inicial de acordo com o contrato do pricing
