# src/main/java/com/santander/bp/model/external/BenchmarkIndex.java
@@ -1,0 +1,9 @@
+package com.santander.bp.model.external;
+
+import lombok.Data;
+
+// BenchmarkIndex.java
+@Data
+public class BenchmarkIndex {
+  private String code;
+}
