# src/main/java/com/santander/bp/model/external/InvestmentPricingConditionResponse.java
@@ -1,0 +1,13 @@
+package com.santander.bp.model.external;
+
+import lombok.Data;
+
+@Data
+public class InvestmentPricingConditionResponse {
+  private Price price;
+  private Product product;
+  private BenchmarkIndex benchmarkIndex;
+  private String reason;
+  private Double fundingRate;
+  private PromotionalCode promotionalCode;
+}
