# src/main/java/com/santander/bp/model/external/Price.java
@@ -1,0 +1,11 @@
+package com.santander.bp.model.external;
+
+import java.util.List;
+import lombok.Data;
+
+@Data
+public class Price {
+  private String code;
+  private String priceConceptId;
+  private List<Tier> tiers;
+}
