# src/main/java/com/santander/bp/model/external/PricingRequest.java
@@ -1,0 +1,14 @@
+package com.santander.bp.model.external;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import java.util.List;
+import lombok.Data;
+
+@Data
+public class PricingRequest {
+  @JsonProperty("investmentOrder")
+  private InvestmentOrder investmentOrder;
+
+  @JsonProperty("investmentPricingConditions")
+  private List<InvestmentPricingCondition> investmentPricingConditions;
+}
