# src/main/java/com/santander/bp/model/external/PromotionalCode.java
@@ -1,0 +1,9 @@
+package com.santander.bp.model.external;
+
+import lombok.Data;
+
+// PromotionalCode.java
+@Data
+public class PromotionalCode {
+  private String promotionalCodeId;
+}
